--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#465973</color>
+    <color name="colorPrimary">#BACDD9</color>
+    <color name="colorPrimaryDark">#283040</color>
+    <color name="colorAccent">#747474</color>
+    <color name="colorAcceptBackground">#18B845</color>
+    <color name="colorRejectBackground">#942B32</color>
+    <color name="colorAcceptText">#58CC79</color>
+    <color name="colorRejectText">#FF8F8F</color>
 </resources>
