--- a/app/src/main/res/values/viewpager_diems.xml
+++ b/app/src/main/res/values/viewpager_diems.xml
@@ -5,4 +5,8 @@
     <dimen name="pageMarginAndoffset">50dp</dimen>
     <dimen name="viewpager_next_item_visible">26dp</dimen>
     <dimen name="viewpager_current_item_horizontal_margin">42dp</dimen>
+    <dimen name="viewpager_current_icon_horizontal_margin">12dp</dimen>
+    <dimen name="notification_elevation">8dp</dimen>
+    <dimen name="icon_size">45dp</dimen>
+    <dimen name="notification_icon_size">60dp</dimen>
 </resources>
