--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/home"
-            android:title="home"
-            android:icon="@drawable/ic_home_black_24dp"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item
+        android:id="@id/mainFragment"
+        android:title="home"
+        android:icon="@drawable/ic_home_black_24dp"/>
     <group
         android:id="@+id/created"
         android:checkableBehavior="single">
