fixed up navigation and made an ugly groups screen

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@id/mainFragment"
+        android:id="@id/action_global_mainFragment"
         android:title="home"
         android:icon="@drawable/ic_home_black_24dp"/>
     <group
@@ -12,12 +12,12 @@
             android:title="contacts"
             android:icon="@drawable/ic_group_black_24dp"/>
         <item
-            android:id="@+id/events"
-            android:title="events"
+            android:id="@id/action_global_groupsPageFragment"
+            android:title="groups"
             android:icon="@drawable/ic_group_black_24dp"/>
         <item
-            android:id="@+id/groups"
-            android:title="groups"
+            android:id="@+id/events"
+            android:title="events"
             android:icon="@drawable/ic_group_black_24dp"/>
     </group>
 
