--- a/app/src/main/res/layout/group_activity.xml
+++ b/app/src/main/res/layout/group_activity.xml
@@ -100,7 +100,7 @@
         android:textColor="#EFEFEF"
         android:lines="1"
         android:maxLines="3"
-        android:maxLength="30"
+        android:maxLength="100"
         android:scrollHorizontally="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,13 +160,13 @@
         android:id="@+id/confirm_text"
         android:layout_width="81dp"
         android:layout_height="36dp"
-        android:text="@string/create_confirm"
+        android:text="@string/confirm"
         android:textColor="#E3E3E3"
-        android:textStyle="bold"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.930"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
