--- a/app/src/main/res/layout/group_activity.xml
+++ b/app/src/main/res/layout/group_activity.xml
@@ -84,29 +84,30 @@
         android:layout_marginHorizontal="25dp"
         android:layout_marginStart="16dp"
         android:inputType="text"
+        android:maxLength="57"
         android:textColor="#EFEFEF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.376" />
 
+
     <EditText
         android:id="@+id/group_description1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="115dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginStart="16dp"
+        android:gravity="bottom|left"
         android:inputType="textCapSentences|textMultiLine"
-        android:textColor="#EFEFEF"
-        android:lines="1"
-        android:maxLines="3"
-        android:maxLength="100"
+        android:lines="5"
+        android:maxLines="5"
         android:scrollHorizontally="false"
+        android:textColor="#EFEFEF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505"/>
-
+        app:layout_constraintVertical_bias="0.582" />
 
     <TextView
         android:layout_width="wrap_content"
