Finished sequence for confirm group and corrected confirm group activities colours

--- a/app/src/main/res/layout/confirm_group.xml
+++ b/app/src/main/res/layout/confirm_group.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConfrimGroup"
-    android:background="@drawable/background">
+    android:background="@color/colorBackground">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_page_title"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_group_name_label"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/confirm_group_name"
         android:layout_width="404dp"
         android:layout_height="46dp"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_group_desc_label"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:id="@+id/confirm_group_desc"
         android:layout_width="364dp"
         android:layout_height="127dp"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,11 +90,11 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <TextView
-        android:id="@+id/confirm_text"
+        android:id="@+id/create_text"
         android:layout_width="81dp"
         android:layout_height="36dp"
         android:text="@string/create"
-        android:textColor="#E3E3E3"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="@string/cancel_button"
-        android:textColor="#E3E3E3"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/group_description1"
@@ -136,7 +136,7 @@
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:text="@string/create_edit"
-        android:textColor="#E3E3E3"
+        android:textColor="@color/colorPrimary"
         android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -151,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_group_contacts"
-        android:textColor="#CFCFCF"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
