--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
         android:orientation="vertical">
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:background="@color/colorPrimaryDark"
@@ -23,32 +22,29 @@
                 android:layout_gravity="end"
                 android:src="@drawable/male_placeholder" />
         </androidx.appcompat.widget.Toolbar>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
 
+            <fragment
+                android:id="@+id/nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="618dp"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_graph" />
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:background="@color/colorPrimary"
-                app:labelVisibilityMode="unlabeled"
+                app:labelVisibilityMode="labeled"
                 app:itemIconTint="@color/colorAccent"
                 app:itemTextColor="@color/colorAccent"
                 app:menu="@menu/bottom_navigation_menu" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </FrameLayout>
     </LinearLayout>
-
         <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
