--- a/app/src/main/res/layout/fragment_groups_page.xml
+++ b/app/src/main/res/layout/fragment_groups_page.xml
@@ -13,8 +13,8 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/row_height"
         android:textColor="@color/colorPrimaryDark"
+        android:textSize="@dimen/notification_icon_size"
         android:text="Groups" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/groups"
