--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -31,6 +31,7 @@
             android:textColor="@color/colorPrimaryDark"
             android:layout_weight="1" />
          <ImageView
+             android:id="@+id/X"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_clear_black_24dp"
