--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -11,52 +11,67 @@
         app:layout_constraintBottom_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="horizontal">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/photo"
-            android:layout_width="@dimen/notification_icon_size"
-            android:layout_height="@dimen/notification_icon_size"/>
-        <TextView
-            android:id="@+id/name"
-            android:textSize="40sp"
-            android:textAlignment="center"
+        android:padding="20dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photo"
+                android:layout_width="@dimen/notification_icon_size"
+                android:layout_height="@dimen/notification_icon_size"/>
+            <TextView
+                android:layout_weight="1"
+                android:id="@+id/name"
+                android:textSize="40sp"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/open_contacts"
+                android:layout_width="@dimen/notification_icon_size"
+                android:layout_height="@dimen/notification_icon_size"
+                app:backgroundTint="#FFFFFF"
+                app:iconTint="@color/colorAccent"
+                app:strokeColor="#FFFFFF"
+                android:stateListAnimator="@null"
+                app:icon="@drawable/ic_people_black_24dp"/>
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/contacts_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/contacts_section"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:cardCornerRadius="20dp"
         android:padding="50dp"
+        app:cardBackgroundColor="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal">
-                <ImageView
-                    android:contentDescription="search"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_search_black_24dp"/>
-
-              <com.google.android.material.textfield.TextInputLayout
-                  android:id="@+id/GroupSearch"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent" />
-          </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/contacts"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contacts"
+            android:backgroundTint="@color/colorBackground"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_margin="20dp"
         android:layout_height="match_parent">
         <LinearLayout
             app:layout_constraintTop_toTopOf="parent"
@@ -174,4 +189,23 @@
                 app:layout_constraintEnd_toEndOf="parent" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/group_contacts_header">
+            <LinearLayout
+                android:layout_marginTop="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contacts_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            </LinearLayout>
+        </com.google.android.material.navigation.NavigationView>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
