--- a/app/src/main/res/layout/fragment_view_group.xml
+++ b/app/src/main/res/layout/fragment_view_group.xml
@@ -53,21 +53,21 @@
         android:id="@+id/contacts_section"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:cardCornerRadius="20dp"
-        android:padding="50dp"
         app:cardBackgroundColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
+        <TextView
+            android:id="@+id/no_contacts"
+            android:text="Your Group is Empty"
+            android:textSize="30dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contacts"
             android:backgroundTint="@color/colorBackground"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -117,7 +117,6 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
                         <TextView
-                            android:id="@+id/textEvents"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="22sp"
@@ -132,6 +131,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
                             <TextView
+                                android:id="@+id/noEvents"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textSize="30sp"
