--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -5,26 +5,28 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+    app:cardBackgroundColor="@color/colorPrimary"
     android:layout_marginTop="10dp"
-    android:padding="8dp"
+    app:contentPadding="5dp"
     app:cardCornerRadius="10dp">
 
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<de.hdodenhof.circleimageview.CircleImageView
-    android:id="@+id/photo"
-    android:layout_width="@dimen/notification_icon_size"
-    android:layout_height="@dimen/notification_icon_size"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/photo"
+        android:layout_width="@dimen/notification_icon_size"
+        android:layout_height="@dimen/notification_icon_size"/>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/name"
-            android:textSize="15sp"
+            android:layout_marginStart="10dp"
+            android:textSize="22sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -32,6 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+    <TextView
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
