--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorBackground">#465973</color>
     <color name="colorPrimary">#BACDD9</color>
+    <color name="colorPrimaryLight">#FFFFFF</color>
     <color name="colorPrimaryDark">#283040</color>
     <color name="colorAccent">#747474</color>
     <color name="colorAcceptBackground">#18B845</color>
